# mojogp

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.githooks/: commit-msg  pre-push
.github/commit_checks/: check_conventional_commits.py
.github/workflows/: commit-messages.yml  publish-pypi.yml  publish-testpypi.yml  render-marimo-notebooks.yml
accelerator_packages/sm100/: MANIFEST.in  README.md  pyproject.toml  setup.py
accelerator_packages/sm120/: MANIFEST.in  README.md  pyproject.toml
accelerator_packages/sm75/: MANIFEST.in  README.md  pyproject.toml
accelerator_packages/sm75/src/mojogp_cuda_sm75/: __init__.py
accelerator_packages/sm80/: MANIFEST.in  README.md  pyproject.toml  setup.cfg
accelerator_packages/sm86/: MANIFEST.in  README.md  pyproject.toml
accelerator_packages/sm89/: MANIFEST.in  README.md  pyproject.toml
accelerator_packages/sm90/: LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: API.md  FEATURE_MATRIX.md  index.md  mkdocs.yml
docs/features/: support-status.md
docs/getting-started/: accelerator-targets.md  installation.md  quickstart.md
docs/reference/: feature-support.md  index.md  kernels.md  multi-output.md  package.md  single-output.md  utilities.md
docs/releases/: 0.26.6.0.md
docs/templates/: analysis_prompt.md
examples/: basic_gp_training.py  continuous_lmc_gp.py  fixed_observation_noise.py  gp_inference.py  grouped_observation_noise.py  hyperparameter_optimization.py  inference_benchmark.py  input_dependent_observation_noise.py  lmc_ard_relevance.py  mixed_lmc_workflow.py  multi_output_observation_noise.py  multi_output_workflow.py  single_output_continuous_features.py
mojogp/: __init__.py  _multi_output_backend.py  _provider_lifecycle.py  _provider_runtime.py  _routes.py  _version.py  compiler.py  feature_support.py  gp.py  kernel.py  loader.py  multi_output_gp.py  pathwise_prior.py  progress.py  settings.py  utils.py
mojogp/benchmark/: config.py
mojogp/codegen_engine/: __init__.py  compiler.py  differentiation.py  expressions.py  ir.py  overrides.py  registry.py  schedule.py
mojogp/kernels/: __init__.mojo  bbmm_gpu_kernels.mojo  bbmm_types.mojo  categorical_composable.mojo  categorical_kernel.mojo  categorical_state.mojo  cg_solver.mojo  cg_with_provider.mojo  combined_inv_quad_logdet.mojo  composable_kernel.mojo  composite_matvec.mojo  composite_prediction.mojo  composite_provider.mojo  constants.mojo  cross_covariance_provider.mojo  gemm_matvec.mojo  gemm_tiled.mojo  generic_matvec.mojo  gpu_utils.mojo  gradient_provider.mojo  kernel_functions.mojo  kernel_materialization.mojo  kernel_params.mojo  kronecker_direct_provider.mojo  kronecker_gpu_kernels.mojo  kronecker_preconditioner.mojo  kronecker_provider.mojo  lanczos.mojo  lanczos_with_provider.mojo  lmc_bbmm_step.mojo  lmc_bbmm_step_mf.mojo  lmc_composite_provider.mojo  lmc_preconditioner.mojo  lmc_provider.mojo  love_provider.mojo  matvec_provider.mojo  mixed_composite_matvec.mojo  mixed_composite_provider.mojo  mixed_composite_training.mojo  multi_output_prediction.mojo  (+10 more)
mojogp/specialization/: __init__.py  benchmark.py  builtins.py  decision.py  descriptor.py  profile.py  registry.py  rules.py  translate.py
notebooks/examples/: 01_hello_gp.py  02_diabetes_ard.py  03_mauna_loa_co2.py  04_multi_output.py  05_scaling.py  06_constant_mean_function.py  08_ard_vs_isotropic.py  09_discrete_variables.py  11_fixed_observation_noise.py  (+7 more)
tests/: conftest.py  test_mixed_composite.py
tools/: render_marimo_notebooks.py  validate_notebooks.py
(+352 files in other folders)
